static/style.css
.uk-background-secondary .uk-navbar-dropdown-nav .uk-active a {
    color: white !important;
}

.uk-background-secondary .uk-navbar-dropdown-nav .uk-nav-header {
    color: #666 !important;
    text-transform: none !important;
    font-weight: bold !important;
    font-size: 120% !important;
    padding: 0 !important;
}
.uk-background-secondary .uk-navbar-dropdown-nav .uk-nav-header.uk-active {
    color: white !important;
}

.uk-background-secondary .uk-navbar-dropbar {
    background: #222222 !important;
}

.uk-navbar-container {
    height: 70px;
}

.uk-navbar-dropdown {
    top: 45px !important;
}

.hover-title a {
    visibility: hidden;
    opacity: 0;

    transition: opacity 200ms ease-in-out;
    -moz-transition: opacity 200ms ease-in-out;
    -webkit-transition: opacity 200ms ease-in-out;
}

.hover-title:hover a {
    visibility: visible;
    opacity: 1;

    transition: opacity 200ms ease-in-out;
    -moz-transition: opacity 200ms ease-in-out;
    -webkit-transition: opacity 200ms ease-in-out;
}

.uk-article-title {
    margin-bottom: 0 !important;
}

.uk-article-meta {
    margin-top: 0 !important;
}

.uk-section {
    padding-top: 20px;
    padding-bottom: 30px;
}

.uk-heading-divider .uk-article-meta {
    margin-bottom: 0;
}

img.uk-border-rounded {
    border: 1px #25292f solid;
}

